WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62089
[Qt] Fix and unskip acid2
https://bugs.webkit.org/show_bug.cgi?id=62089
Summary
[Qt] Fix and unskip acid2
Robert Hogan
Reported
2011-06-04 05:08:31 PDT
[Qt] Fix and unskip acid2
Attachments
Patch
(28.95 KB, patch)
2011-06-04 05:20 PDT
,
Robert Hogan
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2011-06-04 05:20:20 PDT
Created
attachment 96019
[details]
Patch
Benjamin Poulain
Comment 2
2011-06-04 06:29:44 PDT
Adding Andreas, he knows the frame loader a lot better than I do.
Andreas Kling
Comment 3
2011-06-04 07:06:41 PDT
Comment on
attachment 96019
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=96019&action=review
Looks good, r=me.
> Source/WebKit/qt/ChangeLog:18 > + Some ports also check when WebKitErrorPluginWillHandleLoad deciding > + what to return. This error isn't currently set by Qt so we don't check
This looks a bit jumbled. Some ports also check WebKitErrorPluginWillHandleLoad when deciding what to return?
> Source/WebKit/qt/ChangeLog:20 > + it. (Other ports set it when the erring document is a MediaDocument, maybe > + we should do that too at some point).
Sounds like you should file a bug about that. :)
Robert Hogan
Comment 4
2011-06-05 13:13:09 PDT
Committed
r88135
: <
http://trac.webkit.org/changeset/88135
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug