2011-06-05  Robert Hogan  <robert@webkit.org>

Reviewed by Andreas Kling.

        [Qt] Fix and unskip acid2
        https://bugs.webkit.org/show_bug.cgi?id=62089

        We're unskipping acid2.html event though it's just a landing
        page for the acid2 test. Some elements of the test are loaded by
        the landing page so it is testing something, but acid2-pixel covers the same
        ground.

        * platform/qt/Skipped:
        * platform/qt/fast/css/acid2-expected.txt: Updated
        * platform/qt/fast/css/acid2-pixel-expected.png: Added.
        * platform/qt/fast/css/acid2-pixel-expected.txt: Added.
        * platform/qt/fast/overflow/overflow-height-float-not-removed-crash-expected.txt: Removed.
        * platform/qt/fast/overflow/overflow-height-float-not-removed-crash3-expected.txt: Removed.
        * platform/qt/http/tests/misc/acid2-expected.png: Added.
        * platform/qt/http/tests/misc/acid2-expected.txt: Added.
        * platform/qt/http/tests/misc/acid2-pixel-expected.png: Added.
        * platform/qt/http/tests/misc/acid2-pixel-expected.txt: Added
2011-06-04  Robert Hogan  <robert@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] Fix and unskip acid2
        https://bugs.webkit.org/show_bug.cgi?id=62089

        shouldFallBack() tells the DOM if it should attempt to render
        the next nested <object> if its parent fails to load.

        This fix is only required for the fast/css version of the ACID2
        test, which loads a non-existent file:// url. The HTTP version of the
        test already passes because the loader will render fallback content
        on a failed HTTP load without delegating the decision to the client
        ( see MainResourceLoader::continueAfterContentPolicy).

        Some ports also check for WebKitErrorPluginWillHandleLoad when deciding
        what to return. This error isn't currently set by Qt so we don't check
        it. (Other ports set it when the erring document is a MediaDocument, maybe
        we should do that too at some point).

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::shouldFallBack):

Canonical link: https://commits.webkit.org/77580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88135 268f45cc-cd09-0410-ab3c-d52691b4dbfc